--- a/src/scss/blocks/menu-navigator.scss
+++ b/src/scss/blocks/menu-navigator.scss
@@ -30,7 +30,7 @@
         font-family: "Poppins", sans-serif;
         color: #9197B3;
         font-size: 14px;
-        height: 30vh;
+        height: 25vh;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
@@ -55,6 +55,64 @@
 
             &:hover{
                 cursor: pointer;
+            }
+        }
+    }
+
+    &__promo{
+        font-family: "Poppins", sans-serif;
+        text-align: center;
+        font-weight: bold;
+        background: linear-gradient(130deg, #EAABF0, #4623E9);
+        width: 250px;
+        height: 150px;
+        color: #fff;
+        border-radius: 20px;
+        padding-bottom: 20px;
+        margin-left: 28px;
+
+        &-title{
+            padding: 34px 33px 10px 26px;
+            font-size: 14px;
+        }
+
+        &-button{
+            width: 203px;
+            height: 40px;
+            border-radius: 20px;
+            border: none;
+            color: #4925E9;
+            font-weight: bold;
+            font-family: "Poppins", sans-serif;
+
+
+            &:hover{
+                cursor: pointer;
+                background-color: #4623E9;
+                color: #fff;
+                transition: background-color 0.3s ease;
+            }
+        }
+    }
+
+    &__profile{
+        font-family: "Poppins", sans-serif;
+        display: grid;
+        grid-template-columns: auto 1fr auto;
+        margin-top: 48px;
+        margin-left: 28px;
+
+        &-text{
+            padding-left: 12px;
+            
+            
+            &__name{
+                font-size: 14px;
+            }
+
+            &__special{
+                font-size: 12px;
+                color: #757575;
             }
         }
     }
