--- a/src/css/main.css
+++ b/src/css/main.css
@@ -282,4 +282,8 @@ video {
   padding: 0;
   border: 0; }
 
+a {
+  text-decoration: none;
+  color: inherit; }
+
 /*# sourceMappingURL=main.css.map */
